--- a/css/luna.css
+++ b/css/luna.css
@@ -2,7 +2,8 @@
     background-image: url(../images/animatedbg.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size:120% 120%;
+    background-size:100% 100%;
+    min-height: 100vh;
     color: whitesmoke;
 }
 
@@ -53,7 +54,7 @@
     color: black; 
 }
 .Watch input{
-  margin-bottom:100px;
+  margin-bottom:200px;
 }
 footer{
   font-family: 'Trebuchet MS';
@@ -82,7 +83,6 @@ footer{
   font-size: 25px;
   text-align: justify;
   font-family: 'Times New Roman';
-  
 }
 .content2 h1{
 font-size: 40px;
@@ -159,9 +159,7 @@ body h1{
 /*---------------phone-responsiveness-------------------*/
 /*home*/
 @media only screen and (max-width: 480px) {
-  .whole{
-    background-size: cover;
-  }
+
   .content1 h1 {
     font-size: 50px;
   }
@@ -451,7 +449,24 @@ font-size: 10px;
 }
 
 /*discover*/
-
+.navigation {
+  padding: 10px;
+  justify-content: center; 
+  padding: 10px 10px;
+}
+.navigation ul {
+  display:flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.navigation ul li{
+  margin-right: 20px;
+}
+.navigation ul li a {
+  font-size: 15px;
+  margin: 10px;
+}
 
 .phaseimage img{
   max-width: 100%;
