--- a/css/luna.css
+++ b/css/luna.css
@@ -60,6 +60,7 @@ footer{
   font-family: 'Trebuchet MS';
   text-align: center;
   margin: 0;
+  bottom: 0;
 }
 
 
@@ -159,7 +160,10 @@ body h1{
 /*---------------phone-responsiveness-------------------*/
 /*home*/
 @media only screen and (max-width: 480px) {
-
+  .whole {
+    background-size:200% 100%;
+    min-height: 90vh;
+}
   .content1 h1 {
     font-size: 50px;
   }
@@ -170,7 +174,7 @@ body h1{
 .Watch input[type="submit"] {
     background-color: grey;
     color: white;
-    padding: 5px 10px;
+    padding: 5px 10px;  
     margin-top: 10px;
     font-size: 12px;
 }
@@ -245,9 +249,6 @@ body h1{
 
 /*---------------low reso tablet & ipad-responsiveness-------------------*/
 @media only screen and (max-width: 767px) and (min-width: 481px) {
-    .whole {
-      background-size: cover; 
-    }
     .content1 h1{
       font-size: 70px;
     }
@@ -335,9 +336,6 @@ body h1{
 
 /*---------------Tablet&ipadportrait mode-responsiveness-------------------*/
 @media only screen and (max-width:1023px) and (min-width: 768px){
-  .whole {
-    background-size: cover; 
-  }
   .content1 h1{
     font-size: 85px;
   }
@@ -426,9 +424,6 @@ footer{
 
 /*---------------Desktop responsiveness-------------------*/
 @media only screen and (max-width:1280px) and (min-width: 1024px) {
-  .whole {
-    background-size: cover; 
-  }
   .content1 h1{
     font-size: 85px;
   }
