--- a/css/luna.css
+++ b/css/luna.css
@@ -134,11 +134,20 @@ font-family: 'Segoe UI';
 
 
 /*-----------about*------------------------*/
-
-body h1{
+.forabout-title{
+  background-image: url(../images/bckgrnd.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: whitesmoke;
+  padding: 10px;
+  min-height: 100vh;
+}
+.forabout-title h1{
+  margin-top: 20px;
   padding:10px;
   font-size: 35px;
   font-family: 'Lucida Sans';
+  color: aliceblue;
 }
 .aboutcontent{
   background-color: gray;
@@ -147,6 +156,7 @@ body h1{
   margin-right: auto;
   margin-top: auto;
   border-radius: 10px;
+  padding: 5px;
 }
 .aboutcontent p{
   text-indent: 50px;
@@ -226,7 +236,6 @@ footer{
 .cardholder{
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
   max-height: 100vh;
  }
  .card {
