--- a/css/luna.css
+++ b/css/luna.css
@@ -69,6 +69,7 @@ footer{
   background-image: url(../images/bckgrnd.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size:100% 100%;
   color: whitesmoke;
 
 }
