--- a/css/luna.css
+++ b/css/luna.css
@@ -142,6 +142,7 @@ font-family: 'Segoe UI';
   color: whitesmoke;
   padding: 10px;
   min-height: 100vh;
+  background-size:100% 100%;
 }
 .forabout-title h1{
   margin-top: 20px;
