--- a/css/luna.css
+++ b/css/luna.css
@@ -1,90 +1,90 @@
 .whole {
-    background-image: url(../images/animatedbg.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size:100% 100%;
-    min-height: 100vh;
-    color: whitesmoke;
+  background-image: url(../images/animatedbg.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size:100% 100%;
+  min-height: 100vh;
+  color: whitesmoke;
 }
 
 .navigation {
-    background-color: rgb(19, 18, 18);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px ;
+  background-color: rgb(19, 18, 18);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px ;
 }
 
 .navigation ul li {
-    display: inline-block;
-    margin-right:30px;
+  display: inline-block;
+  margin-right:30px;
 }
 
 .navigation ul li a {
-    text-decoration: none;
-    color: whitesmoke;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+  text-decoration: none;
+  color: whitesmoke;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 20px;
 }
 
 .content1 {
-    margin: 0 auto;
-    padding: 60px 20px 0;
-    text-align: center;
+  margin: 0 auto;
+  padding: 60px 20px 0;
+  text-align: center;
 }
 
 .content1 p {
-    margin-bottom: 20px;
-    font-size: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
 }
 .content1 h1{
-  font-size: 100px;
+font-size: 100px;
 }
 .Discover input[type="submit"],
 .Watch input[type="submit"] {
-    background-color: grey;
-    color: white;
-    padding: 10px 20px;
-    margin-top: 10px;
-    font-size: 16px;
+  background-color: grey;
+  color: white;
+  padding: 10px 20px;
+  margin-top: 10px;
+  font-size: 16px;
 }
 
 .Discover input[type="submit"]:hover,
 .Watch input[type="submit"]:hover {
-    color: black; 
+  color: black; 
 }
-.Watch input{
-  margin-bottom:200px;
-}
+
 footer{
-  font-family: 'Trebuchet MS';
-  text-align: center;
-  margin: 0;
-  bottom: 0;
+font-family: 'Trebuchet MS';
+text-align: center;
+bottom: 0;
+right: 0;
+bottom: 0;
+position: absolute;
 }
 
 
 /*--------------------------Discover-----------------------------*/
 .universe {
-  background-image: url(../images/bckgrnd.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size:100% 100%;
-  color: whitesmoke;
+background-image: url(../images/bckgrnd.jpg);
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size:100% 100%;
+color: whitesmoke;
 
 }
 .phaseimage{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: 0;
-  padding: 0;
+display: flex;
+justify-content: center;
+align-content: center;
+margin: 0;
+padding: 0;
 }
 .content2{
-  padding: 30px;
-  font-size: 25px;
-  text-align: justify;
-  font-family: 'Times New Roman';
+padding: 30px;
+font-size: 25px;
+text-align: justify;
+font-family: 'Times New Roman';
 }
 .content2 h1{
 font-size: 40px;
@@ -92,79 +92,79 @@ margin-top: 20px;
 font-family: 'Segoe UI';
 }
 .content2 p{
-  text-indent: 50px;
+text-indent: 50px;
 }
 
 .Sentences img{
-  display: block;
-  margin: 0 auto;
-  width: 30%;
+display: block;
+margin: 0 auto;
+width: 30%;
 }
 
 /*-------------WatchVideo----------------*/
 .video-universe{
-  background-color: whitesmoke;
+background-color: whitesmoke;
 }
 .cardholder{
- display: flex;
- align-items: center;
+display: flex;
+align-items: center;
 }
 .card {
-  display: inline-block; 
-  align-content: center;
-  background-color: black;
-  width: 25vw;
-  color: whitesmoke;
-  margin: 5px 0px 0px 5px;
+display: inline-block; 
+align-content: center;
+background-color: black;
+width: 25vw;
+color: whitesmoke;
+margin: 5px 0px 0px 5px;
 }
 .card iframe{
-  min-height: 60vh;
-  min-width: 21vw;
-  padding: 10px 0px 10px 10px;
+min-height: 60vh;
+min-width: 21vw;
+padding: 10px 0px 10px 10px;
 
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .container {
-  padding: 2px 16px;
-  background-color: black;
+padding: 2px 16px;
+background-color: black;
 }
 
 
 /*-----------about*------------------------*/
 .forabout-title{
-  background-image: url(../images/bckgrnd.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  color: whitesmoke;
-  padding: 10px;
-  min-height: 100vh;
-  background-size:100% 100%;
+background-image: url(../images/bckgrnd.jpg);
+background-repeat: no-repeat;
+background-attachment: fixed;
+color: whitesmoke;
+padding: 10px;
+min-height: 100vh;
+background-size:100% 100%;
 }
 .forabout-title h1{
-  margin-top: 20px;
-  padding:10px;
-  font-size: 35px;
-  font-family: 'Lucida Sans';
-  color: aliceblue;
+margin-top: 20px;
+padding:10px;
+font-size: 35px;
+font-family: 'Lucida Sans';
+color: aliceblue;
 }
 .aboutcontent{
-  background-color: gray;
-  width: 75vw;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  border-radius: 10px;
-  padding: 5px;
+background-color: gray;
+width: 75vw;
+margin-left: auto;
+margin-right: auto;
+margin-top: auto;
+border-radius: 10px;
+padding: 5px;
 }
 .aboutcontent p{
-  text-indent: 50px;
-  padding: 20px;
-  font-family: 'Lucida Sans';
-  text-align: justify;
+text-indent: 50px;
+padding: 20px;
+font-family: 'Lucida Sans';
+text-align: justify;
 
 }
 
@@ -172,183 +172,96 @@ font-family: 'Segoe UI';
 /*---------------phone-responsiveness-------------------*/
 /*home*/
 @media only screen and (max-width: 480px) {
-  .whole {
-    background-size:200% 100%;
-    min-height: 90vh;
+.whole {
+  background-size:200% 100%;
+  min-height: 90vh;
 }
-  .content1 h1 {
-    font-size: 50px;
-  }
-  .content1 p{
-    font-size: 12px;
-  }
-  .Discover input[type="submit"],
+.content1 h1 {
+  font-size: 50px;
+}
+.content1 p{
+  font-size: 12px;
+}
+.Discover input[type="submit"],
 .Watch input[type="submit"] {
-    background-color: grey;
-    color: white;
-    padding: 5px 10px;  
-    margin-top: 10px;
-    font-size: 12px;
+  background-color: grey;
+  color: white;
+  padding: 5px 10px;  
+  margin-top: 10px;
+  font-size: 12px;
 }
 footer{
-  font-size: 10px;
+font-size: 10px;
 }
 
 /*discover*/
 .navigation {
-  padding: 10px;
-  justify-content: center; 
-  padding: 10px 10px;
+padding: 10px;
+justify-content: center; 
+padding: 10px 10px;
 }
 .navigation ul {
-  display:flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+display:flex;
+list-style: none;
+margin: 0;
+padding: 0;
 }
 .navigation ul li{
-  margin-right: 20px;
+margin-right: 20px;
 }
 .navigation ul li a {
-  font-size: 10px;
-  margin: 5px;
+font-size: 10px;
+margin: 5px;
 }
 
 .phaseimage img{
-  max-width: 100%;
-  height: auto;
+max-width: 100%;
+height: auto;
 }
 .content2 center{
-  font-size: 15px;
+font-size: 15px;
 }
 .Sentences h1{
-  font-size: 25px;
+font-size: 25px;
 }
 .Sentences p{
-  font-size: 15px;
+font-size: 15px;
 }
 .Sentences img{
-  width:60vw;
-  height: auto;
+width:60vw;
+height: auto;
 }
 .Sentences ul{
-  font-size: 15px;
+font-size: 15px;
 }
 /*watchvideo*/
 .cardholder{
-  display: flex;
-  flex-direction: column;
-  max-height: 100vh;
- }
- .card {
-    min-width: 90vw;
-    margin: 5px 0;
- }
+display: flex;
+flex-direction: column;
+max-height: 100vh;
+}
+.card {
+  min-width: 90vw;
+  margin: 5px 0;
+}
 
 .card iframe{
-  margin-left: 25px;
-  height: 70vh;
-  width: 75vw;
+margin-left: 25px;
+height: 70vh;
+width: 75vw;
 }
 /*about*/
 body h1{
-  font-size: 25px;
+font-size: 25px;
 }
 }
 
 
 
-/*---------------low reso tablet & ipad-responsiveness-------------------*/
+/*---------------low reso tablet & ipad-responsiveness
 @media only screen and (max-width: 767px) and (min-width: 481px) {
-    .content1 h1{
-      font-size: 70px;
-    }
-    .content1 p{
-      font-size: 20px;
-    }
-    .Discover input[type="submit"],
-  .Watch input[type="submit"] {
-      background-color: grey;
-      color: white;
-      padding: 10px 15px;
-      margin-top: 10px;
-      font-size: 12px;
-  }
-
-  footer{
-  font-size: 10px;
-  }
-
-  /*discover*/
-  .navigation {
-    padding: 10px;
-    justify-content: center; 
-    padding: 10px 10px;
-  }
-  .navigation ul {
-    display:flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .navigation ul li{
-    margin-right: 20px;
-  }
-  .navigation ul li a {
-    font-size: 15px;
-    margin: 10px;
-  }
-
-  .phaseimage img{
-    max-width: 100%;
-    height: auto;
-  }
-  .content2 center{
-    font-size: 20px;
-  }
-  .Sentences h1{
-    font-size: 30px;
-  }
-  .Sentences p{
-    font-size: 20px;
-  }
-  .Sentences img{
-    width:60vw;
-    height: auto;
-  }
-  .Sentences ul{
-    font-size: 20px;
-  }
-  /*watchvideo*/
-  .cardholder{
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    max-height: 100vh;
-   }
-   .card {
-      min-width: 90vw;
-      margin: 5px 0;
-   }
-  
-  .card iframe{
-    margin-left: 25px;
-    height: 70vh;
-    width: 75vw;
-  }
-  /*about*/
-  body h1{
-    font-size: 25px;
-  }
-  footer{
-    font-size: 15px;
-    }
-}
-
-/*---------------Tablet&ipadportrait mode-responsiveness-------------------*/
-@media only screen and (max-width:1023px) and (min-width: 768px){
   .content1 h1{
-    font-size: 85px;
+    font-size: 70px;
   }
   .content1 p{
     font-size: 20px;
@@ -366,7 +279,7 @@ footer{
 font-size: 10px;
 }
 
-/*discover*/
+/*discover
 .navigation {
   padding: 10px;
   justify-content: center; 
@@ -406,24 +319,24 @@ font-size: 10px;
 .Sentences ul{
   font-size: 20px;
 }
-/*watchvideo*/
+/*watchvideo
 .cardholder{
   display: flex;
-  align-content: center;
+  flex-direction: column;
   overflow-y: auto;
   max-height: 100vh;
-}
-.card {
-    min-width: 45vw;
+ }
+ .card {
+    min-width: 90vw;
     margin: 5px 0;
-}
+ }
 
 .card iframe{
   margin-left: 25px;
   height: 70vh;
-  width: 45vw;
-}
-/*about*/
+  width: 75vw;
+
+/*about
 body h1{
   font-size: 25px;
 }
@@ -431,4 +344,90 @@ footer{
   font-size: 15px;
   }
 }
-  
+
+/*---------------Tablet&ipadportrait mode-responsiveness-------------------
+@media only screen and (max-width:1023px) and (min-width: 768px){
+.content1 h1{
+  font-size: 85px;
+}
+.content1 p{
+  font-size: 20px;
+}
+.Discover input[type="submit"],
+.Watch input[type="submit"] {
+  background-color: grey;
+  color: white;
+  padding: 10px 15px;
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+footer{
+font-size: 10px;
+}
+
+/*discover
+.navigation {
+padding: 10px;
+justify-content: center; 
+padding: 10px 10px;
+}
+.navigation ul {
+display:flex;
+list-style: none;
+margin: 0;
+padding: 0;
+}
+.navigation ul li{
+margin-right: 20px;
+}
+.navigation ul li a {
+font-size: 15px;
+margin: 10px;
+}
+
+.phaseimage img{
+max-width: 100%;
+height: auto;
+}
+.content2 center{
+font-size: 20px;
+}
+.Sentences h1{
+font-size: 30px;
+}
+.Sentences p{
+font-size: 20px;
+}
+.Sentences img{
+width:60vw;
+height: auto;
+}
+.Sentences ul{
+font-size: 20px;
+}
+/*watchvideo
+.cardholder{
+display: flex;
+align-content: center;
+overflow-y: auto;
+max-height: 100vh;
+}
+.card {
+  min-width: 45vw;
+  margin: 5px 0;
+}
+
+.card iframe{
+margin-left: 25px;
+height: 70vh;
+width: 45vw;
+}
+/*about
+body h1{
+font-size: 25px;
+}
+footer{
+font-size: 15px;
+}
+}
